examples/test_package/steps/benchrps__:rough.pl_run1/#test_analysis_1_result.txt
### Rock-Paper-Scissors Game Evaluation Report

---

#### **1. Document Title**  
**Evaluation of Rock-Paper-Scissors ProbLog Implementation**

---

#### **2. Background and Purpose**  
The provided code implements the classic game of Rock-Paper-Scissors in ProbLog. The purpose of this evaluation is to verify the correctness of the game rules, the `play/3` predicate for determining game outcomes, and the `compute_score/2` and `determine_winner/3` predicates for calculating the final winner. The evaluation also checks for logical errors, recursive termination, and edge cases.

---

#### **3. Test Results Summary**  
The test query `determine_winner([rock,rock,rock],[paper,paper,scissor],W)` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 17:21.
```

**Failed Query:**  
- `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`  
  - **Expected Result:** `Winner = player2` (since `paper` beats `rock` twice and `scissor` loses to `rock` once).  
  - **Actual Result:** Error due to an undefined clause for `->/2`.

---

#### **4. Failure Localization**  
The error occurs in the `play/3` predicate, specifically at the line where the conditional (`->`) operator is used. The ProbLog engine cannot resolve the `->/2` operator, indicating a syntax or semantic issue.  

**Code Block with Error:**  
```prolog
play([P1 | P1Moves], [P2 | P2Moves], [Result | Results]) :-
    ( beats(P1, P2) -> Result = win
    ; beats(P2, P1) -> Result = lose
    ; Result = draw
    ),
    play(P1Moves, P2Moves, Results).
```

**Line Number:** 17:21 (approximate location of the error).

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:** The logic for determining the game outcome (`win`, `lose`, `draw`) is correct, but the use of the `->/2` operator is problematic in ProbLog.  
- **Recursive Termination:** The recursion in `play/3` and `compute_score/2` is correctly implemented and terminates when the input lists are empty.  
- **Probabilistic Context:** The code does not use probabilistic facts or DeepProbLog features, so no probabilistic rules are violated.  

**Suggested Fix:** Replace the `->/2` operator with standard Prolog conditionals (`if-then-else`).  

**Corrected Code:**  
```prolog
play([P1 | P1Moves], [P2 | P2Moves], [Result | Results]) :-
    ( beats(P1, P2), Result = win
    ; beats(P2, P1), Result = lose
    ; Result = draw
    ),
    play(P1Moves, P2Moves, Results).
```

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** The game rules and outcome determination are correctly implemented (after fixing the `->/2` issue).  
  - **Probabilistic Reasoning:** Not used in this implementation.  
  - **Neural Network Integration:** DeepProbLog features are not used.  

- **Edge Cases:**  
  - Non-list inputs or mismatched list lengths are not handled.  
  - The `compute_score/2` predicate assumes valid inputs (`win`, `lose`, `draw`).  

---

#### **7. Error Summary**  

| No. | Problem                     | Impact                          | Suggestion                                  |
|-----|-----------------------------|---------------------------------|---------------------------------------------|
| 1   | Undefined `->/2` operator   | Prevents execution of `play/3`  | Replace with standard Prolog conditionals.  |
| 2   | No input validation         | May cause runtime errors        | Add checks for list inputs and lengths.     |

---

**Word Count:** ~450 words.  

**Final Note:** The corrected code should resolve the error and produce the expected results for all valid inputs. Additional input validation would improve robustness.